--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -238,6 +238,7 @@
                                 android:id="@+id/countryCode_picker"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
                                 />
                             <com.google.android.material.textfield.TextInputLayout
                                 android:id="@+id/txatInpPin"
