--- a/app/src/main/res/layout/activity_set_new_password.xml
+++ b/app/src/main/res/layout/activity_set_new_password.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".SetNewPasswordActivity">
 
-<!--    <include-->
-<!--        android:id="@+id/include3"-->
-<!--        layout="@layout/header_black" />-->
+    <include
+        android:id="@+id/include3"
+        layout="@layout/header_black" />
 
 
     <LinearLayout
