--- a/app/src/main/res/layout/activity_card_detail2.xml
+++ b/app/src/main/res/layout/activity_card_detail2.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-<!--        <include layout="@layout/header_black" />-->
+        <include layout="@layout/header_black" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -40,6 +40,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="-80dp"
+
                             android:orientation="horizontal">
                             <ImageView
                                 android:id="@+id/cdImg"
@@ -59,7 +60,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_20sdp"
                                 android:layout_marginEnd="@dimen/_20sdp"
-                                android:hint="Coupon Name"
+                                android:hint="Card Name"
                                 app:helperTextEnabled="true"
                                 android:layout_marginLeft="@dimen/_20sdp"
                                 android:layout_marginRight="@dimen/_20sdp">
@@ -87,7 +88,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_20sdp"
                                 android:layout_marginEnd="@dimen/_20sdp"
-                                android:hint="Coupon Number"
+                                android:hint="Card Number"
                                 app:helperTextEnabled="true"
                                 android:layout_marginLeft="@dimen/_20sdp"
                                 android:layout_marginRight="@dimen/_20sdp">
@@ -149,7 +150,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="@dimen/_20sdp"
                                     android:layout_marginEnd="@dimen/_20sdp"
-                                    android:hint="Coupon Details"
+                                    android:hint="Card Details"
                                     android:layout_marginLeft="@dimen/_20sdp"
                                     android:layout_marginRight="@dimen/_20sdp">
 
@@ -208,17 +209,19 @@
                 android:id="@+id/btnCdel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
                 android:layout_gravity="bottom|end"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="28dp"
                 android:layout_marginRight="28dp"
                 android:layout_marginBottom="22dp"
-                android:contentDescription="Delete Coupon"
+                android:contentDescription="Delete Card"
                 android:fontFamily="@font/catamaran"
-                android:text="Delete Coupon"
+                android:text="Delete Card"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:backgroundTint="#342ea9"
@@ -235,7 +238,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="22dp"
-                android:contentDescription="Add Coupon"
+                android:contentDescription="Add Card"
                 android:fontFamily="@font/catamaran"
                 android:text="Make Payment"
                 android:textColor="@color/white"
