--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".FilterActivity">
 
-<!--    <include-->
-<!--        android:id="@+id/include4"-->
-<!--        layout="@layout/header_black" />-->
+    <include
+        android:id="@+id/include4"
+        layout="@layout/header_black" />
 
 <!--    <com.google.android.material.chip.ChipGroup-->
 <!--        android:id="@+id/chipGroup"-->
@@ -25,10 +25,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:spanCount="4" />
+        app:layout_constraintTop_toBottomOf="@id/include4"
+  />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/btnFil"
