--- a/app/src/main/res/layout/header_black.xml
+++ b/app/src/main/res/layout/header_black.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layoutHeaderBase"
     android:layout_width="match_parent"
+    android:background="@android:color/white"
     android:layout_height="@dimen/_40sdp"
     android:orientation="vertical">
 
@@ -15,7 +16,8 @@
         android:padding="@dimen/_8sdp"
         android:layout_marginStart="@dimen/_5sdp"
         android:src="@drawable/back_white"
-        android:layout_marginLeft="@dimen/_5sdp" />
+        android:layout_marginLeft="@dimen/_5sdp"
+        app:tint="@android:color/black" />
 
 
     <TextView
@@ -25,7 +27,7 @@
         android:layout_centerInParent="true"
         android:fontFamily="@font/catamaran"
         android:paddingTop="@dimen/_3sdp"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:textSize="@dimen/_20sdp"
         android:textStyle="bold" />
 
