--- a/app/src/main/res/layout/activity_card_list.xml
+++ b/app/src/main/res/layout/activity_card_list.xml
@@ -90,7 +90,6 @@
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/catamaran"
                                     android:imeOptions="actionNext"
-                                    android:enabled="false"
                                     android:inputType="text"
                                     android:maxLines="1" />
                             </com.google.android.material.textfield.TextInputLayout>
@@ -119,12 +118,29 @@
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/catamaran"
                                     android:imeOptions="actionNext"
-                                    android:enabled="false"
                                     android:inputType="text"
                                     android:maxLines="1" />
                             </com.google.android.material.textfield.TextInputLayout>
                         </LinearLayout>
 
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            >
+
+                            <Button
+                                android:id="@+id/btnSUpdate"
+                                android:layout_width="@dimen/_100sdp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="20dp"
+                                android:text="Update store"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                android:background="#342ea9"
+                                android:textColor="@color/white"
+
+                                />
                         <Button
                             android:id="@+id/btnSdel"
                             android:layout_width="@dimen/_100sdp"
@@ -135,8 +151,10 @@
                             app:layout_constraintStart_toStartOf="parent"
                             android:background="#342ea9"
                             android:textColor="@color/white"
-                            android:layout_weight="1"
+                            android:layout_marginLeft="@dimen/_10sdp"
                             />
+
+                        </LinearLayout>
 
 </LinearLayout>
                     <androidx.recyclerview.widget.RecyclerView
