--- a/app/src/main/res/layout/store_details.xml
+++ b/app/src/main/res/layout/store_details.xml
@@ -8,7 +8,7 @@
 
     <ScrollView
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:fillViewport="true"
         android:scrollbarThumbVertical="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,26 +18,24 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/storeCv"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_marginTop="@dimen/_30sdp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20sdp"
             app:cardCornerRadius="16dp"
             app:cardElevation="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.099">
+       >
 
             <ImageView
                 android:id="@+id/fav"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_baseline_favorite_24"
                 android:layout_marginStart="@dimen/_120sdp"
-                tools:ignore="VectorDrawableCompat"
-                app:tint="@color/dark_blue" />
+                app:srcCompat="@drawable/ic_baseline_favorite_24"
+                app:tint="@color/dark_blue"
+                tools:ignore="VectorDrawableCompat" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
