--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -19,11 +19,17 @@
         <item
             android:id="@+id/nav_card"
             android:icon="@drawable/ic_baseline_card_giftcard_24"
-            android:title="Get Card" />
+            android:title="Get Coupon" />
         <item
             android:id="@+id/nav_pin"
             android:icon="@drawable/ic_baseline_lock_24"
             android:title="Security PIN" />
+
+        <item
+            android:id="@+id/nav_fav"
+            android:icon="@drawable/ic_baseline_favorite_24"
+            android:title="Favorites" />
+
         <item
             android:id="@+id/nav_invite"
             android:icon="@drawable/ic_baseline_supervised_user_circle_24"
