--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -80,7 +80,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/catamaran"
                                 android:imeOptions="actionNext"
-                                android:inputType="text"
+                                android:inputType="textCapWords"
                                 android:maxLines="1" />
                         </com.google.android.material.textfield.TextInputLayout>
                     </LinearLayout>
@@ -257,7 +257,6 @@
                                     android:fontFamily="@font/catamaran"
                                     android:imeOptions="actionNext"
                                     android:inputType="phone"
-                                    android:letterSpacing="0.5"
                                     android:maxLines="1" />
                             </com.google.android.material.textfield.TextInputLayout>
                         </LinearLayout>
