--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="red_fav">#F86459</color>
     <color name="gray">#444</color>
     <color name="Light_gray">#ececec</color>
+    <color name="transparent">#66000000</color>
+
 </resources>
