--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -145,36 +145,49 @@
                 android:maxLength="16"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
 
+    </LinearLayout>
     <Button
         android:id="@+id/btn_yes"
-        android:layout_width="@dimen/_100sdp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
         android:layout_marginTop="56dp"
         android:background="@drawable/btn_background"
         android:fontFamily="@font/catamaran"
+       android:layout_margin="@dimen/_30sdp"
+        android:layout_marginStart="@dimen/Dimen_10dp"
         android:text="Save"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toEndOf="@+id/btn_cl"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+        app:layout_constraintLeft_toLeftOf="parent"
+         />
+<!--    <Button-->
+<!--        android:id="@+id/btn_yes"-->
+<!--        android:layout_width="@dimen/_100sdp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="52dp"-->
+<!--        android:layout_marginLeft="52dp"-->
+<!--        android:layout_marginTop="56dp"-->
+<!--        android:background="@drawable/btn_background"-->
+<!--        android:fontFamily="@font/catamaran"-->
+<!--        android:text="Save"-->
+<!--        android:textColor="@color/white"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf= "@+id/btn_cl"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />-->
 
-    <Button
-        android:id="@+id/btn_cl"
-        android:layout_width="@dimen/_100sdp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="56dp"
-        android:background="@drawable/btn_background"
-        android:fontFamily="@font/catamaran"
-        android:text="Cancel"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
+<!--    <Button-->
+<!--        android:id="@+id/btn_cl"-->
+<!--        android:layout_width="@dimen/_100sdp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="32dp"-->
+<!--        android:layout_marginLeft="32dp"-->
+<!--        android:layout_marginTop="56dp"-->
+<!--        android:background="@drawable/btn_background"-->
+<!--        android:fontFamily="@font/catamaran"-->
+<!--        android:text="Cancel"-->
+<!--        android:textColor="@color/white"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
