--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -81,7 +81,8 @@
                                 android:fontFamily="@font/catamaran"
                                 android:imeOptions="actionNext"
                                 android:inputType="text"
-                                android:maxLines="1" />
+                                android:maxLines="1"
+                                android:digits="qwertzuiopasdfghjklyxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM,0123456789"/>
                         </com.google.android.material.textfield.TextInputLayout>
                     </LinearLayout>
 
@@ -207,6 +208,7 @@
                                     android:fontFamily="@font/catamaran"
                                     android:imeOptions="actionNext"
                                     android:inputType="textPassword"
+
                                     android:letterSpacing="0.5"
                                     android:maxLength="16"
                                     android:maxLines="1" />
