--- a/app/src/main/res/layout/activity_add_card2.xml
+++ b/app/src/main/res/layout/activity_add_card2.xml
@@ -42,15 +42,17 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/_50sdp"
-                            android:orientation="horizontal">
+                            android:orientation="horizontal"
+                            android:gravity="center_horizontal"
+                           >
 
 
                             <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height='@dimen/_110sdp'
+                                android:layout_width="wrap_content"
+                                android:layout_height='wrap_content'
                                 android:id="@+id/imgCr"
-                                android:src="@drawable/creditcard"
-                                app:tint="@color/dark_blue" />
+                                android:src="@drawable/coupan"
+                                 />
 
 
                         </LinearLayout>
@@ -70,6 +72,7 @@
                                 android:layout_marginEnd="@dimen/_20sdp"
                                 android:hint="Coupon Name"
                                 app:helperTextEnabled="true"
+                                android:digits="qwertzuiopasdfghjklyxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM,0123456789"
                                 android:layout_marginLeft="@dimen/_20sdp"
                                 android:layout_marginRight="@dimen/_20sdp">
 
@@ -107,6 +110,7 @@
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/catamaran"
                                     android:imeOptions="actionNext"
+                                    android:digits="qwertzuiopasdfghjklyxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM,0123456789"
                                     android:inputType="text"
                                     android:maxLines="1" />
                             </com.google.android.material.textfield.TextInputLayout>
@@ -136,6 +140,7 @@
                                     android:fontFamily="@font/catamaran"
                                     android:imeOptions="actionNext"
                                     android:inputType="text"
+                                    android:digits="qwertzuiopasdfghjklyxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM,0123456789"
                                     android:maxLines="1" />
                             </com.google.android.material.textfield.TextInputLayout>
                         </LinearLayout>
@@ -169,7 +174,7 @@
                                         android:layout_height="wrap_content"
                                         android:fontFamily="@font/catamaran"
                                         android:imeOptions="actionNext"
-
+                                        android:digits="qwertzuiopasdfghjklyxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM,0123456789"
 
                                         android:inputType="text" />
                                 </com.google.android.material.textfield.TextInputLayout>
@@ -206,7 +211,6 @@
                                         android:layout_height="wrap_content"
                                         android:fontFamily="@font/catamaran"
                                         android:imeOptions="actionNext"
-                                        android:inputType="date"
                                         android:maxLines="1" />
                                 </com.google.android.material.textfield.TextInputLayout>
                             </LinearLayout>
