--- a/app/src/main/res/layout/activity_card_detail2.xml
+++ b/app/src/main/res/layout/activity_card_detail2.xml
@@ -41,11 +41,21 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="-80dp"
                             android:orientation="horizontal">
-                            <ImageView
+                            <de.hdodenhof.circleimageview.CircleImageView
                                 android:id="@+id/cdImg"
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/_100sdp"
-                                android:src="@drawable/creditcard" />
+                                android:layout_width="110dp"
+                                android:layout_height="110dp"
+                                android:clickable="true"
+                                android:src="@drawable/profile"
+                                android:focusable="true"
+                                android:padding="@dimen/_4sdp"
+                            android:layout_marginLeft="@dimen/_100sdp"
+                                android:layout_marginBottom="@dimen/_20sdp"/>
+<!--                            <ImageView-->
+<!--                                android:id="@+id/cdImg"-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="@dimen/_100sdp"-->
+<!--                                android:src="@drawable/coupan" />-->
                         </LinearLayout>
 
                         <LinearLayout
@@ -206,19 +216,17 @@
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/btnCdel"
-                android:layout_width="wrap_content"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
                 android:layout_gravity="bottom|end"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
+                android:layout_marginStart="200dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginRight="28dp"
+                android:gravity="center_horizontal"
                 android:layout_marginBottom="22dp"
-                android:contentDescription="Delete Coupon"
+                android:contentDescription="Delete"
                 android:fontFamily="@font/catamaran"
-                android:text="Delete Coupon"
+                android:text="Delete"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:backgroundTint="#342ea9"
@@ -227,17 +235,18 @@
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/btn_pay"
-                android:layout_width="wrap_content"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_gravity="bottom|start"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
+                android:layout_marginStart="23dp"
+                android:gravity="center_horizontal"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="22dp"
                 android:contentDescription="Add Coupon"
                 android:fontFamily="@font/catamaran"
-                android:text="Make Payment"
+                android:text="Payment"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:backgroundTint="#342ea9"
