--- a/app/src/main/res/layout/activity_set_new_password.xml
+++ b/app/src/main/res/layout/activity_set_new_password.xml
@@ -114,7 +114,7 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toEndOf="@+id/btn_cl"
+        app:layout_constraintStart_toEndOf="@+id/btn_cl1"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
 
     <Button
