--- a/app/src/main/res/layout/dialogue_card_detail.xml
+++ b/app/src/main/res/layout/dialogue_card_detail.xml
@@ -18,7 +18,7 @@
         android:gravity="center"
         android:textColor="@color/gray"
         android:textSize="17dp"
-        android:text="Enter Coupon Code"
+        android:text="Enter Shared Coupon Code"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,10 @@
         app:layout_constraintTop_toBottomOf="@+id/etCardName"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="@dimen/Dimen_10dp"
+        >
     <Button
         android:id="@+id/btnCardCancel"
         android:layout_width="wrap_content"
@@ -66,7 +69,7 @@
             android:id="@+id/btnCoopanAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_corners"
+            android:background="@drawable/btn_background"
             android:text="Add"
             android:layout_marginTop="50dp"
             android:layout_marginLeft="30dp"
@@ -74,6 +77,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/btnCardCancel"
             app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="20dp"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
