--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -5,6 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/Dimen_20dp"
     tools:context=".About">
 
     <!-- TODO: Update blank fragment layout -->
@@ -18,8 +19,8 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_80sdp"
-        android:layout_marginTop="40dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="60dp"
         android:src="@drawable/logo2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +31,7 @@
     <TextView
         android:id="@+id/spTxt"
         android:layout_width="363dp"
-        android:layout_height="79dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/bree_serif"
         android:gravity="center_horizontal"
@@ -38,7 +39,8 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#342ea9"
-        android:textSize="55sp"
+        android:textSize="30sp"
+        android:layout_marginBottom="@dimen/Dimen_40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -46,12 +48,11 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/ic_baseline_facebook_24"
-        app:tint="@color/dark_blue"
+        android:src="@drawable/facebook"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spTxt">
 
@@ -59,24 +60,24 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/ic_twitter"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/spTxt"
-        app:tint="@color/dark_blue"/>
-
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/ic_insta"
+        android:src="@drawable/twitter"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/spTxt"
+        />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/instagram"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/spTxt"
-        app:tint="@color/dark_blue"/>
+       />
 
     <TextView
         android:id="@+id/textView"
@@ -86,7 +87,7 @@
         android:text="The wallet of the future"
         android:textSize="@dimen/_25sdp"
         android:textStyle="bold"
-        android:layout_marginLeft="@dimen/_10sdp"
+        android:gravity="center_horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         android:textColor="@color/light_blue"
@@ -100,7 +101,8 @@
         android:id="@+id/textview2"
         android:layout_marginLeft="@dimen/_10sdp"
         android:text="Turn your phone into your wallet and redefine your everyday shopping experience!"
-        android:textSize="@dimen/_15sdp"
+        android:textSize="16dp"
+        android:justificationMode="inter_word"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         android:textColor="@color/lighter_blue"
@@ -114,7 +116,8 @@
         android:textColor="@color/lighter_blue"
         android:layout_marginTop="20dp"
         android:text="Add all your loyalty cards to the app in seconds, get your favorite offers and never miss rewards again - for free!"
-        android:textSize="@dimen/_15sdp"
+        android:textSize="16dp"
+        android:justificationMode="inter_word"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
