--- a/app/src/main/res/layout/imagepick.xml
+++ b/app/src/main/res/layout/imagepick.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:background="@android:color/transparent">
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusable="true"
+        app:cardElevation="10dp"
+        android:id="@+id/card_add_card"
+        app:cardCornerRadius="10dp"
+        app:cardBackgroundColor="@color/Light_gray"
+        app:cardMaxElevation="5dp"
+        app:cardPreventCornerOverlap="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/Light_gray"
+
+        >
     <LinearLayout
         android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:padding="@dimen/Dimen_20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -20,30 +37,32 @@
             android:layout_width="@dimen/_100sdp"
             android:layout_height="@dimen/_40sdp"
             android:layout_weight="1"
-            android:src="@drawable/cam" />
+            android:src="@drawable/camera_img" />
 
         <ImageView
             android:id="@+id/btn_gal"
             android:layout_width="@dimen/_100sdp"
             android:layout_height="@dimen/_40sdp"
             android:layout_weight="1"
-            android:src="@drawable/gallary" />
+            android:src="@drawable/image_gallery" />
     </LinearLayout>
 
     <Button
         android:id="@+id/btn_cancel"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/_30sdp"
         android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginLeft="@dimen/_20sdp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="@dimen/_20sdp"
         android:text="Cancel"
-        android:textColor="#090909"
+        android:textColor="@color/white"
         android:textColorHint="#FFFFFF"
-        app:backgroundTint="#B5B0B0"
+        android:background="@drawable/btn_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
+        android:layout_marginBottom="@dimen/Dimen_20dp"/>
+    </androidx.cardview.widget.CardView>
+</RelativeLayout>
