--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -6,47 +6,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/_170sdp"
         android:background="@color/dark_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="bottom"
+        android:orientation="vertical"
+        android:padding="16dp">
 
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/view2"
-            android:layout_width="@dimen/_110sdp"
-            android:layout_height="@dimen/_110sdp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:elevation="12dp"
-            app:cardCornerRadius="@dimen/_55sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.084"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/nav_profilePic"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </androidx.cardview.widget.CardView>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/nav_profilePic"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:clickable="true"
+            android:src="@drawable/profile"
+            android:focusable="true" />
 
         <TextView
             android:id="@+id/uname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/catamaran"
-            android:text="HIIII"
-            android:textColor="#FFFFFF"
-            android:textSize="@dimen/_20sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.166"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view2" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:paddingTop="16dp"
+            android:layout_marginLeft="@dimen/Dimen_10dp"
+            android:text="Hello"
+            android:textColor="@color/white"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
