--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -8,7 +8,7 @@
     android:focusableInTouchMode="true"
     tools:context=".ChangePasswordActivity">
 
-    <include layout="@layout/header_black" />
+<!--    <include layout="@layout/header_black" />-->
 
 
     <LinearLayout
