--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -234,12 +234,13 @@
                                 android:padding="@dimen/_4sdp"
                                 android:src="@drawable/ic_baseline_phone_iphone_24"
                                 android:layout_marginLeft="@dimen/_20sdp" />
+
                             <com.hbb20.CountryCodePicker
                                 android:id="@+id/countryCode_picker"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                />
+                                android:layout_marginTop="@dimen/_13sdp"
+                                android:gravity="center_vertical" />
                             <com.google.android.material.textfield.TextInputLayout
                                 android:id="@+id/txatInpPin"
                                 android:layout_width="match_parent"
@@ -257,7 +258,6 @@
                                     android:fontFamily="@font/catamaran"
                                     android:imeOptions="actionNext"
                                     android:inputType="phone"
-                                    android:letterSpacing="0.5"
                                     android:maxLines="1" />
                             </com.google.android.material.textfield.TextInputLayout>
                         </LinearLayout>
@@ -267,7 +267,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_5sdp"
                         android:orientation="vertical">
 
                         <LinearLayout
