--- a/app/src/main/res/layout/header_black.xml
+++ b/app/src/main/res/layout/header_black.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layoutHeaderBase"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_40sdp"
+    android:layout_height="?attr/actionBarSize"
+    android:background="@android:color/transparent"
+    android:theme="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
     android:orientation="vertical">
 
     <ImageView
@@ -13,6 +15,7 @@
         android:layout_height="@dimen/_35sdp"
         android:layout_centerVertical="true"
         android:padding="@dimen/_8sdp"
+        android:elevation="0dp"
         android:layout_marginStart="@dimen/_5sdp"
         android:src="@drawable/back_white"
         android:layout_marginLeft="@dimen/_5sdp" />
@@ -20,6 +23,7 @@
 
     <TextView
         android:id="@+id/txtTitle"
+        android:elevation="0dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
