--- a/app/src/main/res/layout/store_details.xml
+++ b/app/src/main/res/layout/store_details.xml
@@ -1,32 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
     <ScrollView
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:fillViewport="true"
         android:scrollbarThumbVertical="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <androidx.cardview.widget.CardView
             android:id="@+id/storeCv"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="@dimen/_10sdp"
             app:cardCornerRadius="16dp"
             app:cardElevation="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-       >
+            app:layout_constraintVertical_bias="0.099">
 
             <ImageView
                 android:id="@+id/fav"
@@ -36,6 +38,7 @@
                 app:srcCompat="@drawable/ic_baseline_favorite_24"
                 app:tint="@color/dark_blue"
                 tools:ignore="VectorDrawableCompat" />
+
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -62,6 +65,9 @@
                     android:textStyle="bold" />
 
             </LinearLayout>
+
         </androidx.cardview.widget.CardView>
+
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
