--- a/app/src/main/res/layout/activity_add_store.xml
+++ b/app/src/main/res/layout/activity_add_store.xml
@@ -66,7 +66,8 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal">
+                            android:orientation="horizontal"
+                            android:layout_marginTop="@dimen/_5sdp">
 
 
                             <com.google.android.material.textfield.TextInputLayout
@@ -78,21 +79,20 @@
                                 android:hint="Store Name"
                                 app:helperTextEnabled="true"
                                 android:layout_marginLeft="@dimen/_20sdp"
-                                android:layout_marginRight="@dimen/_20sdp">
+                                android:layout_marginRight="@dimen/_20sdp"
+                              >
 
                                 <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                     android:id="@+id/storeNm"
                                     android:layout_width="match_parent"
-                                    android:layout_height="@dimen/_40sdp"
+                                    android:layout_height="wrap_content"
                                     android:imeOptions="actionNext"
                                     android:inputType="textCapWords"
-                                    android:paddingLeft="@dimen/_10sdp"
                                     android:maxLines="1">
                                 </com.google.android.material.textfield.MaterialAutoCompleteTextView>
 
                             </com.google.android.material.textfield.TextInputLayout>
                         </LinearLayout>
-
 
                         <LinearLayout
                             android:layout_width="match_parent"
