--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -222,19 +222,19 @@
 
                             </LinearLayout>
 
-                            <Button
-                                android:id="@+id/btn_cnt"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="@dimen/_20sdp"
-                                android:layout_marginLeft="@dimen/_20sdp"
-                                android:layout_marginTop="@dimen/_15sdp"
-                                android:layout_marginEnd="@dimen/_20sdp"
-                                android:layout_marginBottom="@dimen/_5sdp"
-                                android:background="@drawable/btn_background"
-                                android:fontFamily="@font/catamaran"
-                                android:text="Send"
-                                android:textColor="@color/white" />
+                         <Button
+                             android:id="@+id/btnCnt"
+                             android:layout_width="match_parent"
+                             android:layout_height="wrap_content"
+                             android:layout_marginStart="@dimen/_20sdp"
+                             android:layout_marginLeft="@dimen/_20sdp"
+                             android:layout_marginTop="@dimen/_15sdp"
+                             android:layout_marginEnd="@dimen/_20sdp"
+                             android:fontFamily="@font/catamaran"
+                             android:text="Send"
+                             android:background="@drawable/btn_background"
+                             android:textColor="@color/white"
+                             />
 
                         </LinearLayout>
 
