--- a/app/src/main/res/layout/fragment_pin.xml
+++ b/app/src/main/res/layout/fragment_pin.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".Pin">
 
     <!-- TODO: Update blank fragment layout -->
