--- a/app/src/main/res/menu/menu_ser.xml
+++ b/app/src/main/res/menu/menu_ser.xml
@@ -6,4 +6,11 @@
         android:icon="@drawable/ic_baseline_search_24"
         app:showAsAction="always|collapseActionView"
         app:actionViewClass="androidx.appcompat.widget.SearchView"/>
+
+    <item android:id="@+id/filter"
+        android:title="Search"
+        android:icon="@drawable/ic_baseline_filter_alt_24"
+        android:iconTint="@color/white"
+        app:showAsAction="always|collapseActionView"
+      />
 </menu>
